Auto-exposure; DLSS; icons; DescriptorPack refactor; texture_formats dependencies; nvvk::imageToLinear; barrier safety
- Tone mapper auto-exposure

- FindNGX helper script for DLSS; samples now use DLSS 310.4.0

- Adds Material Symbols and Icons to the default font, so you can have icons in text without mid-line font changes

- DescriptorPack has been refactored:

  - DescriptorPack::init() now takes a DescriptorBindings object

  - Owned objects are private; they can be accessed using getter functions.

  - Making write descriptors is shorter now: bindings.getWriteSet(binding, pack.sets[id]) -> pack.makeWrite(binding, id)

- nvvk::imageToRgba8Linear is now nvvk::imageToLinear, and supports passing the VkFormat as a parameter.

- nvvk::saveImageToFile can now write .hdr files.

- Filtered out tests and examples from NVTX package.

- texture_formats can now be compiled without Vulkan or DXGI formats by setting preprocessor defines.

- Using GCC < 11 with TBB >= 2021.6 now prints out an error message and guidance during CMake configuration, instead of producing a compilation error inside libstdc++ (https://github.com/nvpro-samples/vk_gaussian_splatting/issues/9)

- Added missing barriers between consecutive acceleration structure and skinned vertex buffer updates.

Co-Authored-By: Mathias Heyer <mheyer@nvidia.com>
Co-Authored-By: Christoph Kubisch <ckubisch@nvidia.com>
Co-Authored-By: Martin-Karl Lefrançois <mlefrancois@nvidia.com>

Script sync from SHA: fe43ff4dc25a40560f381312110a26bdc59866ea

--- a/nvutils/CMakeLists.txt
+++ b/nvutils/CMakeLists.txt
@@ -14,9 +14,7 @@ target_include_directories(${LIB_NAME} PUBLIC ${PARENT_DIR})
 # Check if TBB is present and add it (for parallel_batches)
 if(UNIX)
   find_package(TBB)
-  if(TBB_FOUND)
-    target_link_libraries(${LIB_NAME} PUBLIC TBB::tbb)
-  else()
+  if(NOT TBB_FOUND)
     message(
       FATAL_ERROR
         "Could not find TBB. Try installing the TBB development \
@@ -25,6 +23,22 @@ library using your package manager: `sudo apt install libtbb-dev` on Ubuntu, \
 NixOS, add `tbb` to your environment."
     )
   endif()
+  
+  # Produce a config error on TBB 2021.6+ and libstdc++ < 11 as they almost
+  # certainly won't compile together, producing a somewhat arcane error; see
+  # https://github.com/nvpro-samples/vk_gaussian_splatting/issues/9#issuecomment-3199120202
+  if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+     AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "11.0.0")
+     AND (TBB_VERSION VERSION_GREATER_EQUAL "2021.6")
+  )
+    message(FATAL_ERROR "It looks like you're using GCC < 11.0.0 and TBB >= 2021.6. \
+TBB 2021.6 and newer broke the API that libstdc++ < 11.0.0's parallel STL relied on. \
+To fix this, try deleting ${CMAKE_BINARY_DIR}/CMakeCache.txt (if it exists) and then \
+re-configuring with GCC 11 or newer (e.g. `CC=gcc-11 CXX=g++-11 cmake ...`). For more information, please see \
+https://github.com/nvpro-samples/vk_gaussian_splatting/issues/9#issuecomment-3199120202 .")
+  endif()
+
+  target_link_libraries(${LIB_NAME} PUBLIC TBB::tbb)
 endif()
 
 target_link_libraries(
