added meshoptimizer to thirdparty
updated tinygltf to custom branch for meshopt_compression support

updated cgltf to 1.15

ktx loading improvements

Script sync from SHA: 1343a07c2f27df6da6c62c64dbdd815387b8493f

Signed-off-by: tigrazone <tigrazone@gmail.com>

--- a/nvvkgltf/CMakeLists.txt
+++ b/nvvkgltf/CMakeLists.txt
@@ -22,6 +22,7 @@ target_link_libraries(
          stb # Image loader
          tinygltf # glTF loader
          tinyobjloader # OBJ loader
+         meshoptimizer
 )
 
 target_precompile_headers(${LIB_NAME} PRIVATE
